Simplify the build more and fix log4j config issues (#41)